# pyronot

./: .gitignore  README.md  XLA_OPTIMIZATIONS.md  bench_fk_baxter.csv  bench_fk_fetch.csv  bench_fk_panda.csv  ik_benchmark.txt  notes  pyproject.toml  results.txt  results_with_cuda_graph.txt  train_learned_ik.py
benchmark/: ik_benchmark.py  robot_coll_benchmark.py
docs/: chomp_trajopt.md  collision_cuda_vs_jax.md  ik_cuda_theory.md  matrix_free_ls_sco.md  sco_trajopt.md  update_example_docs.py
docs/source/: conf.py  index.rst
example_notebooks/: 01_basic_ik.ipynb
example_notebooks/retarget_helpers/: _utils.py
examples/: 01_01_basic_ik_with_cuda.py  01_01_basic_ik_with_ls_cuda.py  01_02_basic_ik_with_hjcd_cuda.py  01_basic_ik.py  02_00_bimanual_ik.py  02_bimanual_ik.py  03_mobile_ik.py  04_00_ik_with_coll.py  04_01_ik_with_coll_ls_cuda.py  04_02_ik_with_coll_hjcd_cuda.py  04_04_ik_with_coll_bench_env.py  04_ik_with_coll.py  05_00_bimanual_ik_with_coll.py  05_01_bimanual_ik_with_coll_ls_cuda.py  05_02_bimanual_ik_with_coll_hjcd_cuda.py  06_online_planning.py  07_00_sco_trajopt.py  07_01_sco_trajopt_with_cuda.py  07_02_chomp_trajopt.py  07_03_ls_trajopt.py  07_trajopt.py  08_00_geometries_example.py  08_ik_with_mimic_joints.py  09_00_quantize_collision.py  09_hand_retargeting.py  10_00_neural_sdf.py  10_humanoid_retargeting.py  11_00_load_from_vamp.py  11_hand_retargeting_fancy.py  12_00_box_region_ik_cuda_brownian.py  12_01_box_region_ik_cuda_hit_and_run.py  12_02_box_region_ik_cuda_svgd.py  12_humanoid_retargeting_fancy.py  13_spherized_robot_ik.py  14_spherized_ik_with_coll.py  15_spherized_ik_then_coll.py  16_spherized_online_planning.py  17_geometries_example.py  18_spherized_trajopt.py  19_spherized_ik_with_coll_exclude_link.py  (+10 more)
examples/pyronot_snippets/: _online_planning.py  _solve_collision_with_config.py  _solve_ik.py  _solve_ik_with_base.py  _solve_ik_with_collision.py  _trajopt.py  (+2 more)
examples_notebooks/: 01_basic_ik.ipynb  01_basic_ik.py
resources/: bench_env.json  bench_ik_results.csv  bench_ik_results_bkup_4.csv  maze.json  problems.json
scripts/: visualize_bench_env.py  visualize_bench_env_cover.py
tests/: bench_collision.py  bench_fk.py  bench_ik.py  bench_stomp_linear.py  bench_trajopt.py  debug_fk_cuda.py  debug_trajopt.py  fk_cpu_vs_tpu_bench.ipynb  test_fk_cuda.py
(+193 files in other folders)
