[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroffi"
version = "0.1.0"
description = "Python Robot Kinematics Library with Accelerated Foreign Kinematics Kernels"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "tyro==0.9.35",
    "jax==0.8.0",
    "jaxlib==0.8.0",
    "jaxlie==1.5.0",
    "jax_dataclasses==1.6.2",
    "jaxtyping==0.3.3",
    "loguru==0.7.3",
    "robot_descriptions==1.21.0",
    "yourdfpy==0.0.58",
    "trimesh==4.9.0",
    "viser==1.0.15",
    "pyliblzfse==0.4.1", # Need for viser.extras import in viser==0.2.23
    "flax==0.12.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.308",
    "scikit-sparse",
    "ruff",
    "pytest",
    "m2r2",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
]
ignore = [
    "E731",  # Do not assign a lambda expression, use a def.
    "E741", # Ambiguous variable name. (l, O, or I)
    "E501",  # Line too long.
    "E721",  # Do not compare types, use `isinstance()`.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Globa statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
]
